# ntpd-rs

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Cross.toml  DEVELOPMENT.md  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  MANAGEMENT_CLIENT.md  OPERATIONAL_CONSIDERATIONS.md  README.md  SECURITY.md  THREATMODEL.md  clippy.toml  config.toml  csptp.toml  deny.toml  docker-compose.yml  mkdocs.yml  networking.md  ntp.server.toml  ntp.toml  ntpd-rs.rc.d.example  ntpd-rs.service.example  zigcc-armv7-unknown-linux-gnueabihf.sh
examples/linux/: Cargo.toml
examples/linux/src/: main.rs
ntp-client/: Cargo.toml
ntp-client/src/: main.rs  prometheus.rs
ntp-ctl/: Cargo.toml  README.md
ntp-ctl/src/: lib.rs  main.rs  prometheus.rs
ntp-daemon/: Cargo.toml  README.md
ntp-daemon/src/: ipfilter.rs  keyexchange.rs  lib.rs  main.rs  nts_key_provider.rs  observer.rs  peer.rs  peer_manager.rs  server.rs  sockets.rs  system.rs  tracing.rs
ntp-daemon/src/config/: dynamic.rs  format.rs  mod.rs  peer.rs  server.rs  subnet.rs
ntp-daemon/src/spawn/: dummy.rs  mod.rs  nts.rs  old.rs  pool.rs  standard.rs
ntp-daemon/testdata/certificates/: nos-nl-chain.pem
ntp-daemon/testdata/config/: ntp.toml  other.toml
ntp-metrics-exporter/: Cargo.toml  README.md
ntp-metrics-exporter/src/: lib.rs  main.rs  metrics.rs
ntp-nts/: Cargo.toml
ntp-nts/src/: lib.rs
ntp-os-clock/: Cargo.toml  README.md
ntp-os-clock/src/: lib.rs  linux.rs  unix.rs
ntp-proto/: Cargo.toml  README.md
ntp-proto/fuzz/: Cargo.toml
ntp-proto/src/: arrayvec.rs  clock.rs  clock_select.rs  config.rs  cookiestash.rs  filter.rs  gps_source.rs  identifiers.rs  io.rs  ipfilter.rs  keyset.rs  lib.rs  membuffer.rs  nts_cookie.rs  nts_pool_ke.rs  nts_record.rs  packet.rs  peer.rs  pps_source.rs  record.rs  server.rs  source.rs  system.rs  time_types.rs  timetypes.rs  tls_utils.rs
ntp-proto/src/algorithm/: mod.rs
ntp-proto/src/csptp/: mod.rs
ntp-proto/src/nts/: messages.rs  mod.rs  record.rs
ntp-proto/src/packet/: crypto.rs  error.rs  extension_fields.rs  extensionfields.rs  mac.rs  mod.rs  v5.rs
ntp-proto/test-keys/: ec_key.pem  end.fullchain.pem  end.key  end.pem  gen-cert.sh  pkcs8_key.pem  testca.pem  unsafe.nts.client.toml  unsafe.nts.server.toml
ntp-udp/: Cargo.toml  README.md
ntp-udp/src/: hwtimestamp.rs  ifaddrs.rs  interface.rs  interface_name.rs  lib.rs  raw_socket.rs  socket.rs
ntp-udp/src/raw_socket/: exceptional_condition_fd.rs  mod.rs  recv_message.rs  set_timestamping_options.rs  timestamping_config.rs
ntpd/: Cargo.toml  build.rs  test-keys
ntpd/src/: ctl.rs  lib.rs  notify.rs  security.rs
ntpd/src/ctl/: force_sync.rs  mod.rs
ntpd/src/daemon/: clock.rs  csptp_server.rs  csptp_source.rs  dns.rs  gps_source.rs  gps_with_gpsd.rs  gps_without_gpsd.rs  ipfilter.rs  keyexchange.rs  local_ip_provider.rs  mod.rs  ntp_source.rs  nts_key_provider.rs  observer.rs  peer.rs  pps_polling.rs  pps_source.rs  ptp_integration_test.rs  ptp_source.rs  ptp_source_integration_test.rs  server.rs  sock_source.rs  sockets.rs  system.rs  tracing.rs  util.rs
ntpd/src/force_sync/: algorithm.rs  mod.rs
ntpd/src/metrics/: exporter.rs  mod.rs
ntpd/testdata/certificates/: nos-nl.pem
ntpd/testdata/config/: invalid.toml  ntp.toml  other.toml
ntpd/tests/: ctl.rs  smoke_testing.rs  smoke_tests_pps.rs
nts-pool-ke/: Cargo.toml  README.md  nts.client.toml  nts.server.toml  pool.toml  unsafe.nts.client.toml  unsafe.nts.server.toml  unsafe.pool.toml
nts-pool-ke/src/: bound_keyexchange.rs  cli.rs  config.rs  lib.rs
nts-pool-ke/src/condcompile/: cli.rs  config.rs
ptp-wire/: Cargo.toml
ptp-wire/src/: lib.rs
ptp-wire/src/common/: clock_accuracy.rs  clock_identity.rs  clock_quality.rs  leap_indicator.rs  mod.rs  port_identity.rs  time_interval.rs  time_source.rs  timestamp.rs  tlv.rs
ptp-wire/src/messages/: announce.rs  control_field.rs  delay_req.rs  delay_resp.rs  follow_up.rs  header.rs  management.rs  mod.rs  p_delay_req.rs  p_delay_resp.rs  p_delay_resp_follow_up.rs  signalling.rs  sync.rs
roughtime/: Cargo.toml
roughtime/src/: main.rs
statime/: Cargo.toml
statime-algo/: Cargo.toml
statime-algo/src/: estimator.rs  filter.rs  lib.rs  link_noise.rs  matrix.rs  ringbuffer.rs
statime-base/: Cargo.toml
statime-base/src/: clock.rs  identifiers.rs  lib.rs  time_types.rs
statime-csptp/: Cargo.toml
statime-csptp/src/: lib.rs  manager.rs  messages.rs  platform.rs  server.rs  source.rs
statime-csptp/src/messages/: tlvs.rs
statime-linux/: Cargo.toml
statime-linux/src/: lib.rs  main.rs  socket.rs
statime-linux/src/clock/: mod.rs  raw.rs  timex.rs
statime-linux/src/config/: mod.rs
statime-linux/src/network/: control_message.rs  epoll.rs  interface.rs  linux.rs  linux_syscall.rs  mod.rs  raw_udp_socket.rs  timestamped_udp_socket.rs
statime-netptp/: Cargo.toml
statime-netptp/src/: addresses.rs  interface.rs  lib.rs  socket.rs  test.rs  wake.rs
statime-netptp/src/addresses/: ipv4.rs  ipv6.rs
statime-netptp/src/socket/: recv.rs  send.rs
statime-stm32/: Cargo.toml  README.md  rust-toolchain.toml
statime-stm32/.cargo/: config.toml
statime-stm32/src/: ethernet.rs  main.rs  port.rs  ptp_clock.rs
statime-wire/: Cargo.toml
statime-wire/src/: lib.rs
statime-wire/src/common/: clock_accuracy.rs  clock_identity.rs  clock_quality.rs  port_identity.rs  time_interval.rs  time_source.rs  timestamp.rs  tlv.rs
statime-wire/src/messages/: announce.rs  delay_req.rs  delay_resp.rs  follow_up.rs  header.rs  management.rs  mod.rs  p_delay_req.rs  p_delay_resp.rs  p_delay_resp_follow_up.rs  signalling.rs  sync.rs
statime/src/: clock.rs  lib.rs  network.rs  port.rs  ptp_instance.rs
statime/src/bmc/: acceptable_master.rs  bmca.rs  dataset_comparison.rs  foreign_master.rs  mod.rs
statime/src/clock/: mod.rs
statime/src/config/: instance.rs  mod.rs  port.rs
statime/src/datastructures/: mod.rs
statime/src/filters/: basic.rs  mod.rs
test-binaries/: Cargo.toml
test-binaries/src/: lib.rs
(+302 files in other folders)
