[workspace]
members = [
    "ntp-proto",
    "ntpd"
]
exclude = [ ]

# Properly take compiler version into account when resolving crates.
resolver = "3"

# Global settings for our crates
[workspace.package]
version = "1.7.0-alpha.20260122"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pendulum-project/ntpd-rs"
homepage = "https://github.com/pendulum-project/ntpd-rs"
readme = "./README.md"
description = "Full-featured implementation of NTP with NTS support"
publish = true
rust-version = "1.88" # MSRV

# Because of the async runtime, we really want panics to cause an abort, otherwise
# the binary can keep on running as a ghost
[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
debug = 2

[workspace.dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["std", "fmt", "ansi"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.0"
arbitrary = { version = "1.0" }
libc = "0.2.150"
tokio = "1.32"
toml = { version = ">=0.6.0,<0.9.0", default-features = false, features = ["parse"] }
timestamped-socket = "0.2.2"
clock-steering = "0.2.1"
pps-time = "0.2.3"

# TLS
rustls23 = { package = "rustls", version = "0.23.16", features = ["logging", "std"] }
rustls-platform-verifier = "0.5.0"
tokio-rustls = { version = "0.26.0", features = ["logging"] }

# crypto
aead = "0.5.0"
aes-siv = "0.7.0"
# Note: md5 is needed to calculate ReferenceIDs for IPv6 addresses per RFC5905
md-5 = "0.10.0"
zeroize = "1.7"

# our own crates used as dependencies, same version as the workspace version
# NOTE: keep this part at the bottom of the file, do not change this line
ntp-proto = { version = "1.7.0-alpha.20260122", path = "./ntp-proto", default-features = false, features = ["__internal-api"] }
