[workspace]
members = [
    "ntp-proto",
    "ntpd"
, "statime-csptp", "statime-wire"]
exclude = [ ]

# Properly take compiler version into account when resolving crates.
resolver = "3"

# Global settings for our crates
[workspace.package]
version = "1.9.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pendulum-project/ntpd-rs"
homepage = "https://github.com/pendulum-project/ntpd-rs"
readme = "./README.md"
description = "Full-featured implementation of NTP with NTS support"
publish = true
rust-version = "1.95" # MSRV

# Because of the async runtime, we really want panics to cause an abort, otherwise
# the binary can keep on running as a ghost
[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
debug = 2

[workspace.dependencies]
arbitrary = { version = "1.0" }
clock-steering = "0.2.1"
hickory-resolver = { version = "0.26.0", features = ["dnssec-aws-lc-rs"] }
libc = "0.2.154"
pps-time = "0.2.3"
rand = { version = "0.8.0", default-features = false }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0"
timestamped-socket = "0.3.0"
tokio = "1.37"
toml = { version = ">=0.6.0,<0.9.0", default-features = false, features = ["parse"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["std", "fmt", "ansi"] }

# TLS
rustls23 = { package = "rustls", version = "0.23.22", default-features = false, features = ["logging", "std", "tls12"] }
rustls-openssl = ">=0.3.0,<0.9"
rustls-platform-verifier = "0.5.0"
tokio-rustls = { version = "0.26.0", default-features = false, features = ["logging", "tls12"] }

# crypto
aead = "0.5.0"
aes-siv = "0.7.0"
# Note: md5 is needed to calculate ReferenceIDs for IPv6 addresses per RFC5905
md-5 = "0.10.0"
zeroize = "1.8.1"
# OpenSSL is an alternative crypto provider
openssl = "0.10.79"

# development
serde_test = { version = "1.0.176" }

# our own crates used as dependencies, same version as the workspace version
# NOTE: keep this part at the bottom of the file, do not change this line
ntp-proto = { version = "1.9.0", path = "./ntp-proto", default-features = false, features = ["__internal-api"] }
statime-wire = { version = "1.9.0", path = "./statime-wire", default-features = false }
