[workspace]
members = [
    "ntp-proto",
    "ntpd"
, "statime-algo", "statime-csptp", "statime-wire", "statime-netptp"]
exclude = [ ]

# Properly take compiler version into account when resolving crates.
resolver = "3"

# Global settings for our crates
[workspace.package]
version = "2.0.0-alpha.20260715"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pendulum-project/ntpd-rs"
homepage = "https://github.com/pendulum-project/ntpd-rs"
readme = "./README.md"
description = "Full-featured implementation of NTP with NTS support"
publish = true
rust-version = "1.95" # MSRV

# Because of the async runtime, we really want panics to cause an abort, otherwise
# the binary can keep on running as a ghost
[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
debug = 2

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
unescaped_backticks = "warn"

[workspace.lints.clippy]
assigning_clones = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
case_sensitive_file_extension_comparisons = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_ptr_alignment = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
comparison_chain = "warn"
copy_iterator = "warn"
default_trait_access = "warn"
doc_comment_double_space_linebreaks = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
elidable_lifetime_names = "warn"
empty_enums = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp = "warn"
fn_params_excessive_bools = "warn"
format_collect = "warn"
format_push_string = "warn"
from_iter_instead_of_collect = "warn"
ignore_without_reason = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
implicit_hasher = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
inline_always = "warn"
into_iter_without_iter = "warn"
invalid_upcast_comparisons = "warn"
ip_constant = "warn"
items_after_statements = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_without_into_iter = "warn"
large_digit_groups = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
manual_string_new = "warn"
many_single_char_names = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
maybe_infinite_iter = "warn"
mismatching_type_param_order = "warn"
missing_errors_doc = "warn"
missing_fields_in_debug = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
mut_mut = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
needless_raw_string_hashes = "warn"
no_effect_underscore_binding = "warn"
no_mangle_with_rust_abi = "warn"
non_std_lazy_statics = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
pub_underscore_fields = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
ref_as_ptr = "warn"
ref_binding_to_reference = "warn"
ref_option = "warn"
ref_option_ref = "warn"
return_self_not_must_use = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
should_panic_without_expect = "warn"
similar_names = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
string_add_assign = "warn"
struct_excessive_bools = "warn"
struct_field_names = "warn"
too_many_lines = "warn"
transmute_ptr_to_ptr = "warn"
trivially_copy_pass_by_ref = "warn"
unchecked_time_subtraction = "warn"
unicode_not_nfc = "warn"
unnecessary_box_returns = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unsafe_derive_deserialize = "warn"
unused_async = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
verbose_bit_mask = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"

[workspace.dependencies]
arbitrary = { version = "1.0" }
clock-steering = "0.2.1"
hickory-resolver = { version = "0.26.0", features = ["dnssec-aws-lc-rs"] }
libc = "0.2.154"
pps-time = "0.2.3"
rand = { version = "0.8.0", default-features = false }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0"
timestamped-socket = "0.3.0"
tokio = "1.37"
toml = { version = ">=0.6.0,<0.9.0", default-features = false, features = ["parse"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["std", "fmt", "ansi"] }

# TLS
rustls23 = { package = "rustls", version = "0.23.22", default-features = false, features = ["logging", "std", "tls12"] }
rustls-openssl = ">=0.3.0,<0.9"
rustls-platform-verifier = "0.5.0"
tokio-rustls = { version = "0.26.0", default-features = false, features = ["logging", "tls12"] }

# crypto
aead = "0.5.0"
aes-siv = "0.7.0"
# Note: md5 is needed to calculate ReferenceIDs for IPv6 addresses per RFC5905
md-5 = "0.10.0"
zeroize = "1.8.1"
# OpenSSL is an alternative crypto provider
openssl = "0.10.79"

# development
serde_test = { version = "1.0.176" }

# our own crates used as dependencies, same version as the workspace version
# NOTE: keep this part at the bottom of the file, do not change this line
ntp-proto = { version = "2.0.0-alpha.20260715", path = "./ntp-proto", default-features = false, features = ["__internal-api"] }
statime-wire = { version = "2.0.0-alpha.20260715", path = "./statime-wire", default-features = false }
statime-netptp = { version = "2.0.0-alpha.20260715", path = "./statime-netptp" }
statime-csptp = { version = "2.0.0-alpha.20260715", path = "./statime-csptp" }
