[package]
name = "ntp-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
ntp-proto = { path = "../ntp-proto" }
ntp-daemon = { path = "../ntp-daemon" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clap = { version = "4.0.14", features = ["derive", "env"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
