[package]
name = "ntp-daemon"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntp-proto = { path = "../ntp-proto" }
ntp-os-clock = { path = "../ntp-os-clock" }
ntp-udp = { path = "../ntp-udp" }

sentry = { workspace = true, optional = true, default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
sentry-tracing = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
toml.workspace = true
thiserror.workspace = true
rand.workspace = true
libc.workspace = true
exitcode.workspace = true
prometheus-client.workspace = true

serde.workspace = true
serde_json.workspace = true

rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile.workspace = true

[dev-dependencies]
ntp-proto = { path = "../ntp-proto", features=["ext-test"]}

[features]
sentry = ["dep:sentry", "dep:sentry-tracing"]
new-algorithm = ["ntp-proto/new-algorithm"]
fuzz = []
