[package]
name = "ntp-daemon"
description = "ntpd-rs daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntp-proto.workspace = true
ntp-os-clock.workspace = true
ntp-udp.workspace = true

sentry = { workspace = true, optional = true }
sentry-tracing = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
toml.workspace = true
thiserror.workspace = true
rand.workspace = true
libc.workspace = true
exitcode.workspace = true
prometheus-client.workspace = true
async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true

rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile.workspace = true

[dev-dependencies]
ntp-proto = { workspace = true, features=["ext-test"]}

[features]
sentry = ["dep:sentry", "dep:sentry-tracing"]
rfc-algorithm = ["ntp-proto/rfc-algorithm"]
fuzz = []
