[package]
name = "ntp-metrics-exporter"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntp-proto = { path = "../ntp-proto" }
ntp-os-clock = { path = "../ntp-os-clock" }
ntp-daemon = { path = "../ntp-daemon" }

axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
prometheus-client.workspace = true
thiserror.workspace = true
