[package]
name = "ntp-metrics-exporter"
description = "ntpd-rs OpenMetrics exporter"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntp-proto.workspace = true
ntp-os-clock.workspace = true
ntp-daemon.workspace = true
prometheus-client.workspace = true
tokio.workspace = true
