[package]
name = "ntp-nts"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
ntp-proto = { path = "../ntp-proto" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "serde", "json"] }
tokio-rustls = "0.23.4"
rustls-native-certs = "0.6.2"
aes-siv = "0.7.0"

[dev-dependencies]
ntp-proto = { path = "../ntp-proto", features=["ext-test"]}

[features]
fuzz = []
