[package]
name = "ntp-os-clock"
description = "ntpd-rs system clock interfaces"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntp-proto.workspace = true
libc.workspace = true
thiserror.workspace  = true
tracing.workspace = true
