[package]
name = "ntp-os-clock"
description = "ntpd-rs system clock interfaces"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntp-proto.workspace = true
libc.workspace = true
tracing.workspace = true
