[package]
name = "ntp-proto"
description = "ntpd-rs packet parsing and algorithms"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
__internal-fuzz = ["arbitrary", "__internal-api"]
__internal-test = ["__internal-api"]
__internal-api = []
ntpv5 = []
nts-pool = []

[dependencies]
# Note: md5 is needed to calculate ReferenceIDs for IPv6 addresses per RFC5905
md-5.workspace = true
rand.workspace = true
tracing.workspace = true
serde.workspace = true
arbitrary = { workspace = true, optional = true }
rustls.workspace = true
aead.workspace = true
aes-siv.workspace = true
zeroize.workspace = true

[dev-dependencies]
rustls-pemfile.workspace = true
serde_test.workspace = true
