[package]
name = "ntp-udp"
description = "ntpd-rs networking and timestamping layer"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntp-proto.workspace = true
tokio = { workspace = true, features = ["net", "time"] }
libc.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
