[package]
name = "ntpd"
description = "An NTP implementation in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
ntp-daemon.workspace = true
ntp-metrics-exporter.workspace = true
ntp-ctl.workspace = true

tokio.workspace = true

[[bin]]
name = "ntp-daemon"
path = "src/bin/ntp-daemon.rs"

[[bin]]
name = "ntp-ctl"
path = "src/bin/ntp-ctl.rs"

[[bin]]
name = "ntp-metrics-exporter"
path = "src/bin/ntp-metrics-exporter.rs"
