[package]
name = "nts-pool-ke"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
publish.workspace = true
rust-version.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = [ "ntp-proto", "rustls-platform-verifier", "rustls-pemfile2", "rustls23", "serde", "tokio-rustls", "toml", "tracing", "tracing-subscriber" ]

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "fs", "net", "macros", "time" ] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["std", "fmt", "ansi"] }
rustls23.workspace = true
rustls-platform-verifier.workspace = true
serde.workspace = true
ntp-proto = { workspace = true }
tokio-rustls.workspace = true

[features]
default = []
unstable_nts-pool = [ "ntp-proto/nts-pool" ]

[[bin]]
name = "nts-pool-ke"
path = "bin/nts-pool-ke.rs"
