[package]
name = "roughtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1.41.0", features = ["io-util", "net", "macros", "rt", "rt-multi-thread"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "digest"] }
sha2 = "0.10.8"
rand.workspace = true
base64 = "0.22.1"
