[package]
name = "statime-base"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = []

[dependencies]
